Misc. small improvements